# capture-visualiser

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/capture_visualiser/: __init__.py  _atlases.py  _constants.py  _presets.py  _scale.py  atlas_layer.py  atlas_loader.py  capture_rectangle.py  napari.yaml  presets.json
src/capture_visualiser/widgets/: __init__.py  ap_slider.py  capture_visualiser_widget.py
tests/: __init__.py
